# metalens

./: Cargo.toml  LICENSE  README.md
docker/: Dockerfile  build-images.sh  run-macos.sh  run-server.sh
docs/: bashreadline.json  formulas.md  pipeline.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  ExportImportWindow.tsx  FilterNode.tsx  LabelNode.tsx  Node.tsx  NodesContainer.tsx  PanningArea.tsx  ProbeNode.tsx  displayPropsSlice.ts  enums.ts  index.css  index.tsx  interfaces.ts  nodesSlice.ts  store.ts  uiSlice.ts
frontend/src/UIComponents/: CodeMirror.tsx  CodeMirrorMetalensTheme.ts  FunctionalField.tsx  WindowButton.tsx
frontend/src/UIComponents/Icons/: BaseSvgIcon.tsx  CloseIcon.tsx  FieldDeleteIcon.tsx  FieldEditIcon.tsx  LeftIcon.tsx  RightIcon.tsx
src/: codegen.rs  dsl.rs  main.rs  runtime.rs  ws.rs
src/formulas/: codegen.rs  formulas.pest  mod.rs  parser.rs
src/nodes/: filter.rs  label.rs  mod.rs  uprobe.rs
